semi-successful attempt to fix cell flicker

--- a/css/snake.css
+++ b/css/snake.css
@@ -1,18 +1,11 @@
 table#snakepit {
-  width: 500px;
   border: 2px solid black;
-}
-
-tr {
-  height: 50px;
-  width: 50px;
+  border-spacing: 0px;
 }
 
 td.snake {
-  font-size: 2.5em;
+  font-size: 10%;
   text-align: center;
-  height: 50px;
-  width: 50px;
   background-color: gray;
 }
 
@@ -21,12 +14,12 @@ td.snake.head {
 }
 
 td.apple {
-  height: 50px;
-  width: 50px;
   background-color: red;
 }
 
 td.empty {
-  height: 50px;
-  width: 50px;
+}
+
+td {
+  box-sizing: border-box;
 }
